Automatically backed up by Learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <h3>New Post Form</h3>
 
 <%= form_for(@post) do |f| %>
-  <label>Post title:</label><br>
+  <label id='title'>Post title:</label><br>
   <%= f.text_field :title %><br>
 
   <label>Post description</label><br>
