--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
-  <%= f.text_field_tag :title %><br>
+  <%= f.text_field :title %><br>
 
   <label>Post description</label><br>
-  <%= f.text_area_tag :description %><br>
+  <%= f.text_area :description %><br>
 
-  <%= f.submit_tag %>
+  <%= f.submit %>
 <% end %>
